--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 							<article id="fairies">
 								<h2 class="major">ᶠᵃⁱʳⁱᵉˢ</h2>
 								<span class="image main"><img src="https://web.archive.org/web/20090730192203/http://www.geocities.com/elsinore4u/Wongfairy.gif" alt="" /></span>
-								<p>fairies are curious & gaurded creatures found in lore & local myths. they are often depicted as small, human-like creatures with delicate wings and magical powers. </p
+								<p>fairies are curious & guarded creatures found in lore & local myths. they are often depicted as small, human-like creatures with delicate wings and magical powers. </p
 								<p>although similar to <a href="#nymphs">nymphs</a>, they are smaller and often inhabit forests, glades, and other pastoral settings in groups or clans.</p>
 								<p>i don't know much abt them. they are very in right now.</p>
 							</article>
@@ -56,7 +56,7 @@
 							<article id="nymphs">
 								<h2 class="major">ɴʏᴍᴘʜs</h2>
 								<span class="image main"><img src="https://web.archive.org/web/20091027105842/http://www.geocities.com/poetrysusanj28/woodnymphborderhead.gif" alt="" /></span>
-								<p>nymphs are figures or gaurdians of trees, bodies of water, and other natural forms that inhabit their wards.</p>
+								<p>nymphs are figures or guardians of trees, bodies of water, and other natural forms that inhabit their wards.</p>
 								<p>while they can live in groups, they are more solitary than their <a href="#fairies">fairy</a> counterparts.</p>
 								<p>i don't know much abt them. shygirl's <a href="https://0800shygirl.bandcamp.com/album/nymph">album <u>nymph</u></a> came out a couple weeks ago & it's pretty good.</p>
 							</article>
